karl package Changelog
======================

Unreleased
----------

- Added an "Any" option at the end of the letterbox to allow clearing
  any existing filter (LP#/570853).

- On each communities sub-view, add a "quick links" panel on the right
  margin, with tabs showing tool links, recent content, and members.
  The last two are fetched on demand using AJAX.  See
  http://dev.karlproject.org/specifications/communitydiscovery.html#step-2-quick-links

- Implemented sub-views for the '/communities/' page:  "Mine" (communities
  of which I am a member), "Active" (communities having acitivty within
  the past 30 days), and "All".  Drop the "My communities" portlet.  See
  http://dev.karlproject.org/specifications/communitydiscovery.html#step-one-dedicated-views

- Add "Community" to list of types in advanced search (LP#571218).

- Add 'fax' field to user profiles (LP#570204).

- Don't blow up when managing tags from profile when no tags are
  present for the profile (LP#558743)

3.28 (2010-04-22)
-----------------

- Introduce trivial AttachmentsSequence widget, along with slight markup and
  javascript tweaks, to get the attachment field on the various formish forms
  to work more like the pre-formish implementation (see LP#564130).

- Get intranets root edit form to correctly default to the sample_feature
  value when the feature field is left blank.

- TemplateAPI object now sets an 'error_message' attribute for formish
  form submission requests w/ validation errors; templates will notice
  this and render a top-of-form error message (fixes LP#564134).

- Improve usability on the formish 'sendalert' fields (see LP#564131).

- Re-specify default 'sendalert' value as True on calendar event add form
  (fixes LP#564115).

- Add "overflow: auto" to the #right div CSS to prevent bad rendering when
  poorly formed (read: very long words w/ no word break, e.g. a long URL)
  content is pulled into a side portlet (fixes LP#540296).
